# rust-engine

./: Cargo.toml  DamagedHelmet.gltf
assets/cubemaps/debug-skybox-colors/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/shaders/: ambient_occlusion.fs.glsl  cubemap.vs.glsl  environment_brdf_lut_generation.fs.glsl  environment_brdf_lut_generation.vs.glsl  fragment.glsl  full_screen_quad.vs.glsl  irradiance_map_convolution_fragment.glsl  light_culling.cs.glsl  packing.glsl  post_processing.fs.glsl  prefiltered_environment_map_generation.fs.glsl  shadow_mapping.vs.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/: camera.rs  image_based_lighting_maps_generator.rs  input.rs  main.rs  profile.rs  renderer.rs
src/assets/: database.rs  mesh.rs  mod.rs  vertex.rs
src/assets/loaders/: gltf_scene_loader.rs  mesh_loader.rs  mod.rs  texture_loader.rs
src/ecs/: components.rs
src/renderer/: ambient_occlusion.rs  ambient_occlusion_pass.rs  cascaded_shadow_maps_pass.rs  light_culling.rs  light_culling_pass.rs  main_pass.rs  meshes_pass.rs  mod.rs  post_process.rs  post_process_pass.rs  shadow_maps.rs
src/settings/: mod.rs
src/ui/: camera_view.rs  edit_widgets.rs  logger.rs  mod.rs  renderer_settings_edit.rs  scene_tree.rs
