[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = "line-tables-only"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bimap = "0.6.3"
flecs_ecs = "0.1.3"
image = "0.25.6"
memory-stats = "1.2.0"

[dependencies.vulkano]
#version = "0.35.1"
git = "https://github.com/vulkano-rs/vulkano"

[dependencies.vulkano-shaders]
#version = "0.35.0"
git = "https://github.com/vulkano-rs/vulkano"

[dependencies.sdl2]
version = "0.37"
features = ["raw-window-handle"]

[dependencies.glam]
version = "0.30.3"

[dependencies.gltf]
version = "1.4.1"
features = ["extras", "names"]
