[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = "line-tables-only"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bimap = "0.6.3"
egui = "0.31.1"
egui_winit_vulkano = "0.28.0"
flecs_ecs = "0.1.3"
image = "0.25.6"
memory-stats = "1.2.0"

[dependencies.vulkano]
version = "0.35.1"

[dependencies.vulkano-shaders]
version = "0.35.0"

[dependencies.winit]
version = "0.30.11"

[dependencies.glam]
version = "0.30.3"

[dependencies.gltf]
version = "1.4.1"
features = ["extras", "names"]
